--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ FONTS
 }
 @font-face {
     font-family: 'Destroy';
-    src: url('Destroy/Destroy_.ttf');
+    src: url('Destroy/DESTROY_.ttf');
 }
 
 @font-face {
@@ -23,7 +23,7 @@ FONTS
 }
 
 
-@font-face { font-family: 'HACKED'; src: url('hacked/HACKED.eot?#iefix') format('embedded-opentype'), url('hacked/HACKED.woff') format('woff'), url('hacked/HACKED.ttf') format('truetype'), url('hacked/HACKED.svg#HACKED') format('svg'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'HACKED'; src: url('HACKED/HACKED.eot?#iefix') format('embedded-opentype'), url('HACKED/HACKED.woff') format('woff'), url('HACKED/HACKED.ttf') format('truetype'), url('HACKED/HACKED.svg#HACKED') format('svg'); font-weight: normal; font-style: normal; }
 
 @font-face {
   font-family: 'Shrapnel';
@@ -193,7 +193,7 @@ a:hover, a:visited, a:link, a:active
 ***********************************************/
 
 .nav_menu {
-  font-family: 'destroy';
+  font-family: 'Destroy';
   font-size: .2em;
   cursor: pointer;
   position: relative;
