--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ a {
 
 .menu li {
   list-style: none;
+  width: 100%;
 }
 
 .overlay {
@@ -129,12 +130,17 @@ footer {
  h2 {
 	font-size: 1.5rem
 }
-a:hover, a:visited, a:link, a:active
+ a:visited, a:link, a:active
 {
   color: inherit;
 	text-decoration: none;
 }
+a li:hover {
+  color: ghostwhite;
+  transition: 500ms;
+  margin-left: 10px;
 
+}
 /***********************************************
             Mobile Navigation Menu
 ***********************************************/
@@ -260,10 +266,10 @@ a.logo {
   z-index: 1;
 }
 .photoContainer {
-	display: flex;
+	align-items:center;
+  display: flex;
   flex-direction: row;
   justify-content:center;
-  align-items:center;
   width: 100%;
 }
 .photoFrame {
